# filim

./: .gitignore  LICENSE  README.md  run.sh
.github/workflows/: deploy.yml
backend/: .env.development  .env.production  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  catalog.py  preferences.py  profiles.py  recommendations.py  sessions.py  streams.py
backend/app/catalog/: __init__.py  service.py
backend/app/core/: cache.py  catalog_refresh.py  config.py  constants.py  flaresolverr.py  logger.py  utils.py  warmup.py
backend/app/db/: __init__.py  cache_store.py  init_db.py  session.py
backend/app/models/: __init__.py  base.py  catalog.py  devices.py  preferences.py  profiles.py  settings.py  streams.py
backend/app/preferences/: __init__.py  service.py
backend/app/profiles/: __init__.py  service.py
backend/app/recommendations/: __init__.py  service.py
backend/app/sessions/: __init__.py  service.py
backend/app/sources/: __init__.py  allanime_catalog.py  queries.py
backend/app/streams/: __init__.py  resolver.py  service.py
frontend/: .prettierrc  next.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ClientProviders.tsx  ContinueCard.tsx  EpisodesPanel.tsx  FilimLoadingSurface.tsx  GridView.tsx  LayoutShell.tsx  Modal.tsx  Player.tsx  SectionRow.tsx  ShowCard.tsx  ShowDetailView.tsx  SplashLoader.tsx
frontend/hooks/: usePreferences.ts
frontend/lib/: admin-context.tsx  episode-match.ts  fullscreen.ts  http.ts  (+3 more)
(+11 files in other folders)
